samples/_failures_safe/1761155441_eff9bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b630eef.c: In function ‘main’:
./samples/SAFE/__tmp_2b630eef.c:159:17: error: expected declaration or statement at end of input
  159 |                 }
      |                 ^
./samples/SAFE/__tmp_2b630eef.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b630eef.c:159:17: error: expected declaration or statement at end of input
